added newlines to *.cpp, *.h, performance improvments.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -84,10 +84,10 @@ now choose a berniw, have fun.
 <h3>1.4 todo</h3>
 <p>
 - bug fixing.<br>
-- just compute things if neccessary, not always.<br>
-- MUCH better trajectory (race and pit, the current one is a big mess).<br>
+- just compute things if neccessary, not always (partially done) .<br>
+- MUCH better trajectory (race and pit, the current one is a big mess) (partially done).<br>
 - better collision avoidance.<br>
-- overtaking.<br>
+- overtaking (partially done).<br>
 - artwork / different cars.<br>
 - setups for the different tracks.<br>
 - better strategy.<br>
@@ -99,10 +99,17 @@ etc.).<br>
 
 <h3>1.5 changes</h3>
 
+<h4>12. dec. 2001</h4>
+<p>
+- performance improvements.<br>
+- newlines at *.cpp, *.h files, strange, my gcc 2.95.3 didn't complain?!.<br>
+- make all ready to deploy to cvs.<br>
+</p>
+
 <h4>10. dec. 2001</h4>
 <p>
 - added path finding from Remi Coulom, K1999.cpp, (c) by Remi Coulom.<br>
-- make all ready to deploy to cvs. 
+- make all ready to deploy to cvs.
 </p>
 
 <h4>7. dec. 2001</h4>
