SIGSEGV bug fix.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -99,6 +99,11 @@ etc.).<br>
 
 <h3>1.5 changes</h3>
 
+<h4>15. dec. 2001</h4>
+<p>
+- hopefully fixed the SIGSEGV bug.<br>
+</p>
+
 <h4>13. dec. 2001</h4>
 <p>
 - fixed a potential bug (never appeared in tests:-)).<br>
