added a viper (berniw 4) and a acura-nsx (berniw 3), minor code cleanups.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -41,7 +41,7 @@ first export the following environment variables (for bash):
 <br>
 export TORCS_BASE=/usr/src/torcs/torcs
 <br>
-export MAKE_DEFAULT=/usr/src/torcs/torcs
+export MAKE_DEFAULT=/usr/src/torcs/torcs/Make-default.mk
 <br>
 <br>
 now change to the drivers directory:
@@ -98,6 +98,13 @@ etc.).<br>
 </p>
 
 <h3>1.5 changes</h3>
+
+<h4>19. dec. 2001</h4>
+<p>
+- added a viper (berniw 4), setups and texture are done.<br>
+- added an acura-nsx (berniw 3), setups and texture not done.<br>
+- minor code cleanups.<br>
+</p>
 
 <h4>18. dec. 2001</h4>
 <p>
