error in changelog.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -101,7 +101,7 @@ etc.).<br>
 
 <h4>19. dec. 2001</h4>
 <p>
-- added a viper (berniw 4), setups and texture are done.<br>
+- added a viper (berniw 4), setups and texture are not done.<br>
 - added an acura-nsx (berniw 3), setups and texture not done.<br>
 - minor code cleanups.<br>
 </p>
