--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -79,14 +79,15 @@ now choose a berniw, have fun.
 - pit stop.<br>
 - simple collision avoidance.<br>
 - stays quite good on various tracks.<br>
+- overtaking.
 </p>
 
 <h3>1.4 todo</h3>
 <p>
-- bug fixing.<br>
+- bug fixing (hmm, hard to know...).<br>
 - just compute things if neccessary, not always (partially done) .<br>
-- MUCH better trajectory (race and pit, the current one is a big mess) (partially done).<br>
-- better collision avoidance.<br>
+- better trajectory (race, pit is nice) (partially done).<br>
+- better collision avoidance (partially done).<br>
 - overtaking (partially done).<br>
 - artwork / different cars.<br>
 - setups for the different tracks.<br>
@@ -94,10 +95,26 @@ now choose a berniw, have fun.
 - communication between berniw's (save fuel behind team mate, block opponents, let pass team mates,
 etc.).<br>
 - improve behavior model.<br>
-- clean up code.<br>
+- clean up code, perhaps a complete rewrite.<br>
 </p>
 
-<h3>1.5 changes</h3>
+<h3>1.5 would you like to get involved?</h3>
+<p>
+if you are interested, you can tune the setups for the cars. they are in the berniw 1-10 directories, named according to the track. if you have a good one, it's welcome, of course (berni4you@gmx.ch).<br>
+</p>
+
+<h3>1.6 contributors</h3>
+<p>
+- texture of berniw 5 has been done by my brother sam:-)<br>
+</p>
+
+<h3>1.7 changes</h3>
+
+<h4>23-25. dec. 2001</h4>
+<p>
+- tried to improve overtaking and breaking, try it out (this was tough!);-).<br>
+- reworked some code, later a merge of overtake() and collision () has to be done for efficiency.<br>
+</p>
 
 <h4>19. dec. 2001</h4>
 <p>
