terxture for viper and setups.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -99,6 +99,14 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>27. dec. 2001</h4>
+<p>
+- did some testing, races are with new overtake more spectacular, so the show improves;-).<br>
+- texture for viper.<br>
+- setups for acura-nsx and viper on e-track-4.<br>
+</p>
+
+
 <h4>26. dec. 2001</h4>
 <p>
 - improved and changed overtake() a bit.<br>
@@ -107,7 +115,7 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h4>23-25. dec. 2001</h4>
 <p>
-- tried to improve overtaking and breaking, try it out (this was tough!);-).<br>
+- tried to improve overtaking and breaking, try it out.<br>
 - reworked some code, later a merge of overtake() and collision () has to be done for efficiency.<br>
 </p>
 
