--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -99,6 +99,11 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>4. jan. 2002</h4>
+<p>
+- minor cleanups (comments, regrouped some code, ...).<br>
+</p>
+
 <h4>29. dec. 2001</h4>
 <p>
 - tried things out (speed dependent margins, ...), improved overtake().<br>
