little overtake() change.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -22,12 +22,13 @@ during the development of this driver, they do a great job:-)
 
 <p>
 gnu general public license 2. anyway, please don't look too hard in the code yet, or my reputation
-will be lost...;-). download the latest version <a href="download/berniw20011225.tar.bz2">berniw20011225.tar.bz2</a> here (it's more recent than the one included in 1.0.0). if you get the CVS
+will be lost...;-). download the latest version <a href="download/berniw20020125.tar.bz2">berniw20020125.tar.bz2</a> here (it's more recent than the one included in 1.0.0). if you get the CVS
 version of torcs, you don't need this package, berniw is already included.
 </p>
 
 <h4>1.1.1 older versions</h4>
 <p>
+- <a href="download/berniw20011225.tar.bz2">berniw20011225.tar.bz2</a> for torcs 1.0.0.<br>
 - <a href="download/berniw20011103.tar.bz2">berniw20011103.tar.bz2</a> for torcs 1.0.0-pre7.<br>
 </p>
 
@@ -38,7 +39,7 @@ so, first you need a working version of torcs 1.0.0 under linux with sources ins
 assume in this instructions the following:<br>
 you have the permisson on the system to do the needed tasks. the torcs sources  are in /usr/src/torcs/torcs and the installation is in
 /usr/local/games/torcs.  in case you use other directories, just replace this directories with the
-ones on your system. i also assume that the <a  href="download/berniw20011225.tar.bz2">berniw20011225.tar.bz2</a>
+ones on your system. i also assume that the <a  href="download/berniw20020125.tar.bz2">berniw20020125.tar.bz2</a>
 is in your home directory.<br>
 <br>
 first export the following environment variables (for bash):<br>
@@ -98,6 +99,12 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 </p>
 
 <h3>1.7 changes</h3>
+
+<h4>29. jan. 2002</h4>
+<p>
+- little overtaking code change, which should avoid some obiously bad overtaking attempts.<br>
+</p>
+
 
 <h4>25. jan. 2002</h4>
 <p>
@@ -218,3 +225,6 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 </body>
 
 </html>
+
+
+
