bugfix in collision(), minor changes.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -100,11 +100,15 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>21. feb. 2002</h4>
+<p>
+- bugfix in collision(), minor changes.<br>
+</p>
+
 <h4>29. jan. 2002</h4>
 <p>
 - little overtaking code change, which should avoid some obiously bad overtaking attempts.<br>
 </p>
-
 
 <h4>25. jan. 2002</h4>
 <p>
