started major clenup of mycar.h, mycar.cpp.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -100,6 +100,11 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>4. mar. 2002</h4>
+<p>
+- starting major cleanups in mycar.h, mycar.cpp.<br>
+</p>
+
 <h4>21. feb. 2002</h4>
 <p>
 - bugfix in collision(), minor changes.<br>
