--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -10,7 +10,7 @@
 
     <h3>System:</h3>
     <ul>
-      <li><b>Win32 port by Christophe Guionneau, including VC++6.0 project files.</b></li>
+      <li><b>Windows 9x port by Christophe Guionneau, including VC++6.0 project files.</b></li>
     </ul>
 
     <h3>Game/Simulation:</h3>
@@ -25,18 +25,22 @@
 
     <h3>Tracks:</h3>
     <ul>
-      <li><b>Trees without black outline on,wheel-1 (Thanks Steve Baker).</b></li>
+      <li><b>Trees without black outline, Thanks to Steve Baker :-)</b></li>
     </ul>
 
     <h3>Cars:</h3>
     <ul>
-      <li><b>New McLaren F1 skins from Jean-Christophe Durieu.</b></li>
+      <li><b>New McLaren F1 and Lotus GT1 skins from Jean-Christophe "Skinner" Durieu.</b></li>
+      <li><b>New Porsche GT1 from Christophe "Guions" Guionneau.</b></li>
+      <li><b>New 360 modena from Eric "Damned" Espie.</b></li>
       <li><b>3D models enhanced (less visual defaults).</b></li>
     </ul>
 
     <h3>Robots:</h3>
     <ul>
       <li><b>Inferno enhanced.</b></li>
+      <li><b>Inferno2 created (360 Modena).</b></li>
+      <li><b>Inferno3 created (Porsche GT1).</b></li>
     </ul>
 
     <hr noshade="noshade" size="2" width="100%">
