--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -47,6 +47,7 @@
       <li><b>New McLaren F1 and Lotus GT1 skins from Jean-Christophe "Skinner" Durieu.</b></li>
       <li><b>New Porsche GT1 from Christophe "Guions" Guionneau.</b></li>
       <li><b>New 360 modena from Eric "Damned" Espie.</b></li>
+      <li><b>New Jaguar XJ-220 derived from a model done by <a href="mailto:viper@mttestdriver.com">ViPeR</a> and skinned by Guions.</b></li>
       <li><b>3D models enhanced (less visual defaults).</b></li>
     </ul>
 
@@ -61,6 +62,7 @@
     <h3>GUI:</h3>
     <ul>
       <li><b>Drivers selection enhanced, now the cars and categories are displayed for the selected robot and the keyboard can be used to navigate in the scroll lists.</b></li>
+      <li><b>Track selection now shows the info on the track plus a map.</b></li>
     </ul>
 
 
@@ -70,6 +72,13 @@
     </ul>
 
     <hr noshade="noshade" size="2" width="100%">
+
+
+
+
+
+
+
  
     <h1>Version 1.0.0:</h1>
 
