--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -65,6 +65,7 @@
       <li><b>Drivers selection enhanced, now the cars and categories are displayed for the selected robot and the keyboard can be used to navigate in the scroll lists.</b></li>
       <li><b>Track selection now shows the info on the track plus a map.</b></li>
       <li><b>Laps number or race distance is now configurable in an option screen.</b></li>
+      <li><b>Race messages are displayed during Quick Race.</b></li>
     </ul>
 
 
