bug fix, anti flying code.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -101,17 +101,26 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
-<h4>9. mai 2002</h4>
+<h4>12. mai 2002</h4>
+<p>
+- fixed bug #554910 (hopefully...).<br>
+</p>
+
+<h4>10. mai 2002</h4>
+<p>
+- added "anti fly code".<br>
+</p>
+
+<h4>till 9. mai 2002</h4>
 <p>
 - merged with torcs 1.1, eg. no frontwing anymore, etc.<br>
 - added some updates for efficiency.<br>
 - changed berniw 3 to porsche-gt1.<br>
-- fixed a minor bugs in my aerodynamics stuff.<br>
+- fixed a minor bug in my aerodynamics stuff.<br>
 - ...
 </p>
 
-
-<h4>till 12. mar. 2002</h4>
+<h4>12. mar. 2002</h4>
 <p>
 - continued cleanups, introduced linalg.h to put vector stuff into it. messed a bit around with overtaking and breaking code.<br>
 </p>
