--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -97,9 +97,16 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 <h3>1.6 contributors</h3>
 <p>
 - texture of berniw 5 has been done by my brother sam:-)<br>
+- windows port has been done by my other brother.<br>
 </p>
 
 <h3>1.7 changes</h3>
+
+<h4>17. mai 2002</h4>
+<p>
+- commited first try of windows port.<br>
+</p>
+
 
 <h4>12. mai 2002</h4>
 <p>
@@ -117,6 +124,7 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 - added some updates for efficiency.<br>
 - changed berniw 3 to porsche-gt1.<br>
 - fixed a minor bug in my aerodynamics stuff.<br>
+- experimental windows port.
 - ...
 </p>
 
