--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -97,16 +97,15 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 <h3>1.6 contributors</h3>
 <p>
 - texture of berniw 5 has been done by my brother sam:-)<br>
-- windows port has been done by my other brother.<br>
+- windows port has supported done by my brother michael.<br>
 </p>
 
 <h3>1.7 changes</h3>
 
 <h4>17. mai 2002</h4>
 <p>
-- commited first try of windows port.<br>
+- commited windows port.<br>
 </p>
-
 
 <h4>12. mai 2002</h4>
 <p>
