--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -34,6 +34,7 @@
     <h3>Controls:</h3>
     <ul>
       <li><b>Support of game-pads and mouse to drive the cars in addition to the current steering wheel support.</b></li>
+      <li><b>Support of multiple controllers.</b></li>
     </ul>
 
     <h3>Tracks:</h3>
@@ -45,7 +46,7 @@
 
     <h3>Cars:</h3>
     <ul>
-      <li><b>New McLaren F1 and Lotus GT1 skins from Jean-Christophe "Skinner" Durieu.</b></li>
+      <li><b>New McLaren F1, 360 modena, Lotus GT1, buggy and acura skins from Jean-Christophe "Skinner" Durieu.</b></li>
       <li><b>New Porsche GT1 from Christophe "Guions" Guionneau.</b></li>
       <li><b>New 360 modena from Eric "Damned" Espie.</b></li>
       <li><b>New Jaguar XJ-220 derived from a model done by <a href="mailto:viper@mttestdriver.com">ViPeR</a> and skinned by Guions.</b></li>
