setups and cleanups.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -74,19 +74,16 @@ now choose a berniw, have fun.<br>
 
 <h3>1.4 todo</h3>
 <p>
-- make compile under windows.<br>
+- setups for the different tracks.<br>
 - bug fixing (hmm, hard to know...).<br>
-- just compute things if neccessary, not always (partially done) .<br>
 - better trajectory (race, pit is nice) (partially done).<br>
 - better collision avoidance (partially done).<br>
 - overtaking (partially done).<br>
-- artwork / different cars.<br>
 - setups for the different tracks.<br>
 - better strategy.<br>
 - communication between berniw's (save fuel behind team mate, block opponents, let pass team mates,
 etc.).<br>
 - improve behavior model.<br>
-- clean up code, perhaps a complete rewrite.<br>
 </p>
 
 <h3>1.5 would you like to get involved?</h3>
@@ -101,6 +98,18 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 </p>
 
 <h3>1.7 changes</h3>
+
+<h4>12. jun. 2002</h4>
+<p>
+- some setups.<br>
+- some old stuff removed and small changes in overtake code.<br>
+</p>
+
+<h4>20. mai 2002</h4>
+<p>
+- minor change in overtaking code.<br>
+- minor cleanups.<br>
+</p>
 
 <h4>17. mai 2002</h4>
 <p>
