added some steer code, tuned parameter for a-speedway, setups.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -99,6 +99,14 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>16. jun. 2002</h4>
+<p>
+- some setups.<br>
+- changed parameter MAXALLOWEDPITCH to fix crazy behaviour on a-speedway (mycar.cpp).<br>
+- some changes in steer code (berniw.cpp).
+</p>
+
+
 <h4>12. jun. 2002</h4>
 <p>
 - some setups.<br>
