improved setups, changes in overtaking.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -103,7 +103,8 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 <p>
 - some setups.<br>
 - changed parameter MAXALLOWEDPITCH to fix crazy behaviour on a-speedway (mycar.cpp).<br>
-- some changes in steer code (berniw.cpp).
+- some changes in steer code (berniw.cpp).<br>
+- changed overtaking, tried to compensate "noise" from interpolation.<br>
 </p>
 
 
