--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -6,7 +6,7 @@
   <body>
     <hr noshade="noshade" size="2" width="100%">
 
-    <h1>Version 1.1.0:</h1>
+    <h1>Version 1.1.0 codename Titouan:</h1>
 
     <h3>System:</h3>
     <ul>
@@ -42,6 +42,8 @@
       <li><b>Trees without black outline, many thanks to <a href="http://plib.sourceforge.net/">Steve Baker</a> for his valuable explanations :-)</b></li>
       <li><b>Michigan Speedway is now usable, the cars don't fly away anymore.</b></li>
       <li><b>Tracks sorted in categories (Oval, Road and Dirt)</b></li>
+      <li><b>New track format allowing kerbs and side walls</b></li>
+      <li><b>Track editor (work in progress)</b></li>
     </ul>
 
     <h3>Cars:</h3>
