overtaking more aggressive.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -99,6 +99,11 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>18. jun. 2002</h4>
+<p>
+- made overtaking more aggressive.<br>
+</p>
+
 <h4>16. jun. 2002</h4>
 <p>
 - some setups.<br>
@@ -106,7 +111,6 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 - some changes in steer code (berniw.cpp).<br>
 - changed overtaking, tried to compensate "noise" from interpolation.<br>
 </p>
-
 
 <h4>12. jun. 2002</h4>
 <p>
