stop and go fix.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -99,6 +99,13 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>19. jun. 2002</h4>
+<p>
+- changed pathslope() for better connection between spline and track.<br>
+- removed connection smoothing.<br>
+- fixed one of the "stop and go" bugs in overtake().<br>
+</p>
+
 <h4>18. jun. 2002</h4>
 <p>
 - made overtaking more aggressive.<br>
