--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -100,6 +100,12 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>25. jun. 2002</h4>
+<p>
+- changed ABS from take care of average slip to maximum slip.<br>
+- some setups.<br>
+</p>
+
 <h4>22. jun. 2002</h4>
 <p>
 - make use of curbs and concrete patches in turns.<br>
