setups, overtaking more aggressive, fixed "backing up".

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -100,6 +100,15 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>26. jun. 2002</h4>
+<p>
+- changed some parameters in mycar.cpp to improve starts.<br>
+- some setups.<br>
+- changed braking code.<br>
+- changed overtaking.<br>
+</p>
+
+
 <h4>25. jun. 2002</h4>
 <p>
 - changed ABS from take care of average slip to maximum slip.<br>
