--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -57,7 +57,7 @@
 
     <h3>Robots:</h3>
     <ul>
-      <li><b>Berniw(s) enhanced.</b></li>
+      <li><b>Berniw(s) enhanced (a lot :-)).</b></li>
       <li><b>Inferno enhanced.</b></li>
       <li><b>Inferno2 created (360 Modena).</b></li>
       <li><b>Inferno3 created (Porsche GT1).</b></li>
