--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -53,15 +53,13 @@
       <li><b>New 360 modena from Eric "Damned" Espie.</b></li>
       <li><b>New Jaguar XJ-220 derived from a model done by <a href="mailto:viper@mttestdriver.com">ViPeR</a> and skinned by Guions.</b></li>
       <li><b>3D models enhanced (less visual defaults).</b></li>
+      <li><b>Rally cars pack from a Car development cooperation of <a href="http://www.patwodesign.com">Patwo Design</a>.</b></li>
     </ul>
 
     <h3>Robots:</h3>
     <ul>
       <li><b>Berniw(s) enhanced (a lot :-)).</b></li>
-      <li><b>Inferno enhanced.</b></li>
-      <li><b>Inferno2 created (360 Modena).</b></li>
-      <li><b>Inferno3 created (Porsche GT1).</b></li>
-      <li><b>Inferno4 created (Jaguar XJ-220).</b></li>
+      <li><b>Inferno familly grows up.</b></li>
     </ul>
 
     <h3>GUI:</h3>
@@ -70,6 +68,7 @@
       <li><b>Track selection now shows the info on the track plus a map.</b></li>
       <li><b>Laps number or race distance is now configurable in an option screen.</b></li>
       <li><b>Race messages are displayed during Quick Race.</b></li>
+      <li><b>Display options for field of view, and amount of smoke and skid marks.</b></li>
     </ul>
 
 
@@ -80,12 +79,6 @@
     </ul>
 
     <hr noshade="noshade" size="2" width="100%">
-
-
-
-
-
-
 
  
     <h1>Version 1.0.0:</h1>
