--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -49,7 +49,7 @@
     <h3>Cars:</h3>
     <ul>
       <li><b>New McLaren F1, 360 modena, Lotus GT1, buggy and acura skins from Jean-Christophe "Skinner" Durieu.</b></li>
-      <li><b>New Porsche GT1 from Christophe "Guions" Guionneau.</b></li>
+      <li><b>New Porsche GT1 and Mercedes CLK DTM from Christophe "Guions" Guionneau.</b></li>
       <li><b>New 360 modena from Eric "Damned" Espie.</b></li>
       <li><b>New Jaguar XJ-220 derived from a model done by <a href="mailto:viper@mttestdriver.com">ViPeR</a> and skinned by Guions.</b></li>
       <li><b>3D models enhanced (less visual defaults).</b></li>
@@ -73,8 +73,9 @@
 
 
     <h3>Bug Corrections:</h3><ul>
-      <li><b><a href="http://sourceforge.net/tracker/?func=detail&atid=103777&aid=549339&group_id=3777">[ #549339 ] Crash in windows 2000</a></b></li>
-      <li><b><a href="http://sourceforge.net/tracker/?func=detail&atid=103777&aid=554910&group_id=3777">[ #554910 ] berniw10 crashes on Mixed 2</a></b></li>
+      <li><b><a href="http://sourceforge.net/tracker/index.php?func=detail&aid=549339&group_id=3777&atid=103777">[ #549339 ] Crash in windows 2000</a></b></li>
+      <li><b><a href="http://sourceforge.net/tracker/index.php?func=detail&aid=554910&group_id=3777&atid=103777">[ #554910 ] berniw10 crashes on Mixed 2</a></b></li>
+      <li><b><a href="http://sourceforge.net/tracker/index.php?func=detail&aid=534915&group_id=3777&atid=103777">[ #534915 ] torcs hangs</a></b></li>
       <li><b>see <a href="http://www.sf.net/projects/torcs">the project on SourceForge</a> for all the bugs.</b></li>
     </ul>
 
