--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -6,6 +6,15 @@
   <body>
     <hr noshade="noshade" size="2" width="100%">
 
+    <h1>Version 1.1.0a</h1>
+
+    <h3>Compilation:</h3>
+    <ul>
+      <li><b>Configuration for PLIB 1.5 updated.</b></li>
+    </ul>
+
+    <hr noshade="noshade" size="2" width="100%">
+
     <h1>Version 1.1.0 codename Titouan:</h1>
 
     <h3>System:</h3>
@@ -44,6 +53,7 @@
       <li><b>Tracks sorted in categories (Oval, Road and Dirt)</b></li>
       <li><b>New track format allowing kerbs and side walls</b></li>
       <li><b>Track editor (work in progress)</b></li>
+      <li><b>Cool g-track-2 from Christophe.</b></li>
     </ul>
 
     <h3>Cars:</h3>
