pit lane speed limiter.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -77,10 +77,8 @@ now choose a berniw, have fun.<br>
 - review the code and choose better names for variables/procedures, improve comments.<br>
 - replace quick hacks with serious routines.<br>
 - setups for the different tracks.<br>
-- bug fixing (hmm, hard to know...).<br>
 - better trajectory (race, pit is nice) (partially done).<br>
 - better collision avoidance (partially done).<br>
-- overtaking (partially done).<br>
 - better strategy.<br>
 - communication between berniw's (save fuel behind team mate, block opponents, let pass team mates,
 etc.).<br>
@@ -100,6 +98,11 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>3. sep. 2002</h4>
+<p>
+- added pit speed limiter.<br>
+</p>
+
 <h4>26. jun. 2002</h4>
 <p>
 - changed some parameters in mycar.cpp to improve starts.<br>
@@ -107,7 +110,6 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 - changed braking code.<br>
 - changed overtaking.<br>
 </p>
-
 
 <h4>25. jun. 2002</h4>
 <p>
