--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -6,6 +6,20 @@
   <body>
     <hr noshade="noshade" size="2" width="100%">
 
+    <h1>Version 1.1.1</h1>
+
+    <h3>Display:</h3>
+    <ul>
+      <li><b>True full screen mode for windows.</b></li>
+    </ul>
+
+    <h3>Graphic:</h3><ul>
+      <li><b>Inside view camera fixed.</b></li>
+    </ul>
+
+    <hr noshade="noshade" size="2" width="100%">
+
+
     <h1>Version 1.1.0a</h1>
 
     <h3>Compilation:</h3>
