--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -74,14 +74,14 @@ now choose a berniw, have fun.<br>
 
 <h3>1.4 todo</h3>
 <p>
+- better strategy.<br>
+- prepare flag and rule handling.<br>
 - review the code and choose better names for variables/procedures, improve comments.<br>
 - replace quick hacks with serious routines.<br>
 - setups for the different tracks.<br>
 - better trajectory (race, pit is nice) (partially done).<br>
 - better collision avoidance (partially done).<br>
-- better strategy.<br>
-- communication between berniw's (save fuel behind team mate, block opponents, let pass team mates,
-etc.).<br>
+- communication between berniw's.<br>
 - improve behavior model.<br>
 </p>
 
@@ -97,6 +97,14 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 </p>
 
 <h3>1.7 changes</h3>
+
+<h4>till 10. oct. 2002</h4>
+<p>
+- setups.<br>
+- berniw 2-10 changed to 360-modena.<br>
+- changed skins of berniw 9 and berniw 2-9.<br>
+- some changes in breaking code.<br>
+</p>
 
 <h4>3. sep. 2002</h4>
 <p>
