--- a/torcs/torcs/CHANGELOG.html
+++ b/torcs/torcs/CHANGELOG.html
@@ -6,7 +6,7 @@
   <body>
     <hr noshade="noshade" size="2" width="100%">
 
-    <h1>Version 1.1.1</h1>
+    <h1>Version 1.2.0</h1>
 
     <h3>Display:</h3>
     <ul>
@@ -15,6 +15,9 @@
 
     <h3>Graphic:</h3><ul>
       <li><b>Inside view camera fixed.</b></li>
+      <li><b>Lighting enabled (by Christophe)</b></li>
+      <li><b>Objects strips and normals recalculated (by Christophe)</b></li>
+      <li><b>Multitexturing (by Christophe)</b></li>
     </ul>
 
     <hr noshade="noshade" size="2" width="100%">
