--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h2>berniw development snapshot for torcs-1.0.0</h2>
+<h2>berniw development snapshot for torcs-1.2.0</h2>
 
 <h3>1.0 what is berniw?</h3>
 
@@ -35,7 +35,7 @@ version of torcs, you don't need this package, berniw is already included.
 <h3>1.2 how do i install berniw?</h3>
 
 <p>
-so, first you need a working version of torcs 1.0.0 under linux with sources installed. i
+so, first you need a working version of torcs 1.2.0 under linux with sources installed. i
 assume in this instructions the following:<br>
 you have the permisson on the system to do the needed tasks. the torcs sources  are in /usr/src/torcs/torcs and the installation is in
 /usr/local/games/torcs.  in case you use other directories, just replace this directories with the
@@ -89,11 +89,17 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.6 contributors</h3>
 <p>
-- texture of berniw 5 has been done by my brother sam:-)<br>
 - windows port has been supported by my brother michael.<br>
 </p>
 
 <h3>1.7 changes</h3>
+
+<h4>till 18. nov. 2002</h4>
+<p>
+- setups.<br>
+- berniw 5 changed to gt-40.<br>
+- skin for berniw 5.<br>
+</p>
 
 <h4>till 10. oct. 2002</h4>
 <p>
