--- a/torcs/torcs/src/drivers/berniw2/readme.html
+++ b/torcs/torcs/src/drivers/berniw2/readme.html
@@ -94,10 +94,11 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
-<h4>till 18. nov. 2002</h4>
+<h4>till 19. nov. 2002</h4>
 <p>
 - setups.<br>
 - berniw 5 changed to gt-40.<br>
+- berniw2-7 changed to porsche-gt3.<br>
 - skin for berniw 5.<br>
 </p>
 
