--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -94,6 +94,11 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>21. nov. 2002</h4>
+<p>
+- basic overlapping support.<br>
+</p>
+
 <h4>till 19. nov. 2002</h4>
 <p>
 - setups.<br>
@@ -334,6 +339,15 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 - added some trajectory code (not used yet).<br>
 - bug hunting, reporting.<br>
 - berniw becomes integrated into the torcs CVS:-).<br>
+</p>
+
+<h3>1.8 how does it work</h3>
+
+<h4>1.8.1 let opponents overlap</h4>
+<p>
+1. the opponent needs to be nearer (e. g. distance &lt; 50m) than a certain threshold, then a timer gets started.<br>
+2. if the distance becomes again greater than a threshold (e. g. distance &gt; 80m), then the timer is reset to zero.<br>
+3. if the opponent is nearer than another threshold (e. g. distance &lt; 15m) and the timer value is greater than e. g. 10s, let him pass.<br>
 </p>
 
 </body>
