minor cosmetics in pathfinder.*.

--- a/torcs/torcs/src/drivers/berniw/readme.html
+++ b/torcs/torcs/src/drivers/berniw/readme.html
@@ -69,7 +69,8 @@ now choose a berniw, have fun.<br>
 - pit stop.<br>
 - simple collision avoidance.<br>
 - stays quite good on various tracks.<br>
-- overtaking.
+- overtaking.<br>
+- let opponents overlap.<br>
 </p>
 
 <h3>1.4 todo</h3>
