--- a/torcs/torcs/src/drivers/berniw2/readme.html
+++ b/torcs/torcs/src/drivers/berniw2/readme.html
@@ -71,12 +71,15 @@ now choose a berniw, have fun.<br>
 - stays quite good on various tracks.<br>
 - overtaking.<br>
 - let opponents overlap.<br>
+- pit speed limiter.
 </p>
 
 <h3>1.4 todo</h3>
 <p>
+- improvment of letting overlap.<br>
+- prepare flag and rule handling (todo is just yellow flag, and perhaps drive through).<br>
 - better strategy.<br>
-- prepare flag and rule handling.<br>
+- improve stability (of car, not of the code).<br>
 - review the code and choose better names for variables/procedures, improve comments.<br>
 - replace quick hacks with serious routines.<br>
 - communication between berniw's.<br>
@@ -94,6 +97,13 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 </p>
 
 <h3>1.7 changes</h3>
+
+<h4>4. dec. 2002</h4>
+<p>
+- changed correctpath(), takes now actual car direction to compute trajectory instead of parrallel to the track.<br>
+- setups.<br>
+- new skin for berniw 2-7.<br>
+</p>
 
 <h4>21. nov. 2002</h4>
 <p>
