--- a/torcs/torcs/src/drivers/berniw2/readme.html
+++ b/torcs/torcs/src/drivers/berniw2/readme.html
@@ -98,6 +98,12 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>8. dec. 2002</h4>
+<p>
+- reduced trajectory footprint, pathfinder.*.<br>
+</p>
+
+
 <h4>4. dec. 2002</h4>
 <p>
 - changed correctpath(), takes now actual car direction to compute trajectory instead of parrallel to the track.<br>
