--- a/torcs/torcs/src/drivers/berniw2/readme.html
+++ b/torcs/torcs/src/drivers/berniw2/readme.html
@@ -98,11 +98,18 @@ if you are interested, you can tune the setups for the cars. they are in the ber
 
 <h3>1.7 changes</h3>
 
+<h4>till 30. dec. 2002</h4>
+<p>
+- fixed array index underflow.<br>
+- improved gear changing, it uses now enginemaxrpmRedLine instead of enginemaxrpm.<br>
+- setups.<br>
+- improved overlapping support.<br>
+</p>
+
 <h4>8. dec. 2002</h4>
 <p>
 - reduced trajectory footprint, pathfinder.*.<br>
 </p>
-
 
 <h4>4. dec. 2002</h4>
 <p>
